--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.0.0",
   "description": "Run ffmpeg serverless!",
   "dependencies": {
-    "aws-sdk": "^2.173.0"
+    "aws-sdk": "^2.1163.0",
+    "fsevents": "^2.3.2"
   },
   "devDependencies": {
     "ava": "^0.24.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
-    "fs-extra": "^5.0.0",
     "serverless-s3-remover": "^0.4.1",
     "serverless-webpack": "^4.2.0",
     "webpack": "^3.10.0",
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "deploy": "serverless deploy function -f ffmpeg",
-    "stack-create": "sls deploy -v",
+    "stack-create": "sls deploy",
     "stack-destroy": "sls remove -v",
     "logs": "sls logs -f ffmpeg -t",
     "test": "ava test/**/*.test.js",
