--- a/serverless.yml
+++ b/serverless.yml
@@ -19,8 +19,8 @@ plugins:
 
 provider:
   name: aws
-  runtime: nodejs6.10
-  timeout: 300
+  runtime: nodejs16.x
+  timeout: 900
   stage: ${file(./config.yml):stage}
   region: ${file(./config.yml):region}
   memorySize: ${file(./config.yml):memorySize}
